--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -16,6 +16,13 @@ permissions:
 jobs:
   build:
 
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+        dc: [dmd-latest, ldc-latest, dmd-2.085.0, ldc-1.17.0]
+        exclude:
+          - { os: macOS-latest, dc: dmd-2.085.0 }
+
     runs-on: ubuntu-latest
 
     steps:
