--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -18,10 +18,10 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest]
         dc: [dmd-latest, ldc-latest, gdc-latest]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
