--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -24,7 +24,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: dlang-community/setup-dlang@4c99aa991ce7d19dd3064de0a4f2f6b2f152e2d7
+    - name: Install D compiler
+      uses: dlang-community/setup-dlang@v1
+      with:
+        compiler: ${{ matrix.dc }}
 
     - name: Install Doveralls (code coverage tool)
       run: |
