--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        dc: [dmd, ldc, gdc]
+        dc: [dmd-latest, ldc-latest, gdc-latest]
 
     runs-on: ubuntu-latest
 
@@ -41,7 +41,7 @@ jobs:
         # Build and run tests, as defined by `unittest` configuration
         # In this mode, `mainSourceFile` is excluded and `version (unittest)` are included
         # See https://dub.pm/package-format-json.html#configurations
-        dub test --compiler=${{ matrix.dc }} --coverage
+        dub test --coverage
 
     - name: Coverage upload
       run: |
