--- a/.github/workflows/d.yml
+++ b/.github/workflows/d.yml
@@ -16,18 +16,11 @@ permissions:
 jobs:
   build:
 
-    strategy:
-      matrix:
-        dc: [dmd-latest, ldc-latest, gdc-latest]
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Install D compiler
-      uses: dlang-community/setup-dlang@v1
-      with:
-        compiler: ${{ matrix.dc }}
+    - uses: dlang-community/setup-dlang@4c99aa991ce7d19dd3064de0a4f2f6b2f152e2d7
 
     - name: Install Doveralls (code coverage tool)
       run: |
@@ -41,7 +34,7 @@ jobs:
         # Build and run tests, as defined by `unittest` configuration
         # In this mode, `mainSourceFile` is excluded and `version (unittest)` are included
         # See https://dub.pm/package-format-json.html#configurations
-        dub test --coverage
+        dub test --compiler=$DC --coverage
 
     - name: Coverage upload
       run: |
